# metriccoders_ml_pypi

./: .gitignore  LICENSE.txt  README.md  setup.cfg
metriccoders_ml/: setup.cfg
src/ml_algorithms/: algorithms.py
src/test/: test_algorithms.py
