[metadata]
name = metriccoders_ml
version = 0.0.1
author = Metric Coders Team
author_email = technologyappsdeveloper@gmail.com
description = This is a python package to load ML models from Metric Coders repository
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/metriccoders/metriccoders_ml_pypi
project_urls =
    Bug Tracker = https://github.com/metriccoders/metriccoders_ml_pypi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src